--- a/index.html
+++ b/index.html
@@ -36,19 +36,32 @@
                     <li data-src="music/Jolly Journey.wav" data-name="Jolly Journey" data-index="1"><span class="songName">Jolly Journey</span><span>03:17</span></li>
                     <li data-src="music/Surfing Skies.wav" data-name="Surfing Skies" data-index="2"><span class="songName">Surfing Skies</span><span>01:05</span></li>
                     <li data-src="music/Leaving Home.wav" data-name="Leaving Home" data-index="3"><span class="songName">Leaving Home</span><span>01:43</span></li>
-                    <li data-src="music/Running South.wav" data-name="Running South" data-index="4"><span class="songName">Running South</span><span>02:36</span></li>
-                    <li data-src="music/When I Go.wav" data-name="When I Go" data-index="5"><span class="songName">When I Go</span><span>02:18</span></li>
-                    <li data-src="music/Get Down.wav" data-name="Get Down" data-index="6"><span class="songName">Get Down</span><span>01:19</span></li>
-                    <li data-src="music/Blooming Desert.wav" data-name="Blooming Desert" data-index="7"><span class="songName">Blooming Desert</span><span>01:23</span></li>
-                    <li data-src="music/Cold Garden.wav" data-name="Cold Garden" data-index="8"><span class="songName">Cold Garden</span><span>01:20</span></li>
-                    <li data-src="music/Dizzy.wav" data-name="Dizzy" data-index="9"><span class="songName">Dizzy</span><span>01:04</span></li>
-                    <li data-src="music/Inspelled.wav" data-name="Inspelled" data-index="10"><span class="songName">Inspelled</span><span>01:48</span></li>
-                    <li data-src="music/I Stay.wav" data-name="I Stay" data-index="11"><span class="songName">I Stay</span><span>01:24</span></li>
-                    <li data-src="music/Shop Town.wav" data-name="Shop Town" data-index="12"><span class="songName">Shop Town</span><span>00:50</span></li>
-                    <li data-src="music/Catch The Train.wav" data-name="Catch The Train" data-index="13"><span class="songName">Catch The Train</span><span>01:17</span></li>
-                    <li data-src="music/Steel Pure.wav" data-name="Steel Pure" data-index="14"><span class="songName">Steel Pure</span><span>02:25</span></li>
-                    <li data-src="music/Straight & Steady.wav" data-name="Straight & Steady" data-index="15"><span class="songName">Straight & Steady</span><span>02:16</span></li>
-                    <li data-src="music/The Cave.wav" data-name="The Cave" data-index="16"><span class="songName">The Cave</span><span>01:50</span></li>
+                    <li data-src="music/Glam Clash.wav" data-name="Glam Clash" data-index="4"><span class="songName">Glam Clash</span><span>01:18</span></li>
+                    <li data-src="music/Running South.wav" data-name="Running South" data-index="5"><span class="songName">Running South</span><span>02:36</span></li>
+                    <li data-src="music/Descanso.wav" data-name="Descanso" data-index="6"><span class="songName">Descanso</span><span>01:33</span></li>
+                    <li data-src="music/Get Down.wav" data-name="Get Down" data-index="7"><span class="songName">Get Down</span><span>01:19</span></li>
+                    <li data-src="music/Blooming Desert.wav" data-name="Blooming Desert" data-index="8"><span class="songName">Blooming Desert</span><span>01:23</span></li>
+                    <li data-src="music/Onyx and Opal.wav" data-name="Onyx and Opal" data-index="9"><span class="songName">Onyx and Opal</span><span>01:03</span></li>
+                    <li data-src="music/Cold Garden.wav" data-name="Cold Garden" data-index="10"><span class="songName">Cold Garden</span><span>01:20</span></li>
+                    <li data-src="music/When I Go.wav" data-name="When I Go" data-index="11"><span class="songName">When I Go</span><span>02:18</span></li>
+                    <li data-src="music/Unlimited.wav" data-name="Unlimited" data-index="12"><span class="songName">Unlimited</span><span>02:05</span></li>
+                    <li data-src="music/Dizzy.wav" data-name="Dizzy" data-index="13"><span class="songName">Dizzy</span><span>01:04</span></li>
+                    <li data-src="music/Inspelled.wav" data-name="Inspelled" data-index="14"><span class="songName">Inspelled</span><span>01:48</span></li>
+                    <li data-src="music/I Stay.wav" data-name="I Stay" data-index="15"><span class="songName">I Stay</span><span>01:24</span></li>
+                    <li data-src="music/HolyDays.wav" data-name="HolyDays" data-index="16"><span class="songName">HolyDays</span><span>02:20</span></li>
+                    <li data-src="music/Shop Town.wav" data-name="Shop Town" data-index="17"><span class="songName">Shop Town</span><span>00:50</span></li>
+                    <li data-src="music/Catch the Train.wav" data-name="Catch the Train" data-index="18"><span class="songName">Catch the Train</span><span>01:17</span></li>
+                    <li data-src="music/Funkwave.wav" data-name="Funkwave" data-index="19"><span class="songName">Funkwave</span><span>03:29</span></li>
+                    <li data-src="music/Steel Pure.wav" data-name="Steel Pure" data-index="20"><span class="songName">Steel Pure</span><span>02:27</span></li>
+                    <li data-src="music/VINSMAS.wav" data-name="VINSMAS" data-index="21"><span class="songName">VINSMAS</span><span>02:20</span></li>
+                    <li data-src="music/Keep Going.wav" data-name="Keep Going" data-index="22"><span class="songName">Keep Going</span><span>01:06</span></li>
+                    <li data-src="music/Straight & Steady.wav" data-name="Straight & Steady" data-index="23"><span class="songName">Straight & Steady</span><span>02:16</span></li>
+                    <li data-src="music/Purple Black Blue.wav" data-name="Purple Black Blue" data-index="24"><span class="songName">Purple Black Blue</span><span>02:16</span></li>
+                    <li data-src="music/The Cave.wav" data-name="The Cave" data-index="25"><span class="songName">The Cave</span><span>01:50</span></li>
+                    <li data-src="music/GHS2015.wav" data-name="GHS2015" data-index="26"><span class="songName">GHS2015</span><span>01:38</span></li>
+                    <li data-src="music/Winter Wonderland.wav" data-name="Winter Wonderland" data-index="27"><span class="songName">Winter Wonderland</span><span>02:19</span></li>
+                    <li data-src="music/34th.wav" data-name="34th" data-index="28"><span class="songName">34th</span><span>04:03</span></li>
+                    <li data-src="music/The End.wav" data-name="The End" data-index="29"><span class="songName">The End</span><span>01:26</span></li>
                 </ul>
                 <audio src="" id="audio"></audio>
             </div>
