--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li data-src="music/HolyDays.wav" data-name="HolyDays" data-index="16"><span class="songName">HolyDays</span><span>02:20</span></li>
                     <li data-src="music/Shop Town.wav" data-name="Shop Town" data-index="17"><span class="songName">Shop Town</span><span>00:50</span></li>
                     <li data-src="music/Catch the Train.wav" data-name="Catch the Train" data-index="18"><span class="songName">Catch the Train</span><span>01:17</span></li>
-                    <li data-src="music/Funkwave.wav" data-name="Funkwave" data-index="19"><span class="songName">Funkwave</span><span>03:29</span></li>
+                    <li data-src="music/Funkwave.mp3" data-name="Funkwave" data-index="19"><span class="songName">Funkwave</span><span>03:29</span></li>
                     <li data-src="music/Steel Pure.wav" data-name="Steel Pure" data-index="20"><span class="songName">Steel Pure</span><span>02:27</span></li>
                     <li data-src="music/VINSMAS.wav" data-name="VINSMAS" data-index="21"><span class="songName">VINSMAS</span><span>02:20</span></li>
                     <li data-src="music/Keep Going.wav" data-name="Keep Going" data-index="22"><span class="songName">Keep Going</span><span>01:06</span></li>
@@ -60,7 +60,7 @@
                     <li data-src="music/The Cave.wav" data-name="The Cave" data-index="25"><span class="songName">The Cave</span><span>01:50</span></li>
                     <li data-src="music/GHS2015.wav" data-name="GHS2015" data-index="26"><span class="songName">GHS2015</span><span>01:38</span></li>
                     <li data-src="music/Winter Wonderland.wav" data-name="Winter Wonderland" data-index="27"><span class="songName">Winter Wonderland</span><span>02:19</span></li>
-                    <li data-src="music/34th.wav" data-name="34th" data-index="28"><span class="songName">34th</span><span>04:03</span></li>
+                    <li data-src="music/34th.mp3" data-name="34th" data-index="28"><span class="songName">34th</span><span>03:19</span></li>
                     <li data-src="music/The End.wav" data-name="The End" data-index="29"><span class="songName">The End</span><span>01:26</span></li>
                 </ul>
                 <audio src="" id="audio"></audio>
