Late Night Riddle + Fire in a Cage

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         data-index="2"><span class="songName">O Camp</span><span>01:12</span></li>
                     <li data-src="music/Leaving Home.wav" data-name="Leaving Home"
                         data-index="3"><span class="songName">Leaving Home</span><span>01:43</span></li>
-                    <li data-src="music/Killing Time, No Crime" data-name="Killing Time, No Crime"
+                    <li data-src="music/Killing Time, No Crime.mp3" data-name="Killing Time, No Crime"
                         data-index="4"><span class="songName">Killing Time, No Crime</span><span>02:48</span></li>
                     <li data-src="music/Jolly Journey.wav" data-name="Jolly Journey"
                         data-index="5"><span class="songName">Jolly Journey</span><span>02:26</span></li>
@@ -63,7 +63,7 @@
                         data-index="12"><span class="songName">Blooming Desert</span><span>01:23</span></li>
                     <li data-src="music/Onyx and Opal.wav" data-name="Onyx and Opal"
                         data-index="13"><span class="songName">Onyx and Opal</span><span>01:03</span></li>
-                    <li data-src="music/Screaming Love" data-name="Screaming Love"
+                    <li data-src="music/Screaming Love.mp3" data-name="Screaming Love"
                         data-index="14"><span class="songName">Screaming Love</span><span>02:20</span></li>
                     <li data-src="music/Cold Garden.wav" data-name="Cold Garden"
                         data-index="15"><span class="songName">Cold Garden</span><span>01:20</span></li>
